--- a/index.html
+++ b/index.html
@@ -27,5 +27,49 @@
         </div>
         <a class="btn-1" target="_blank" href="##">contact us</a>
     </header>
+
+
+    <div class="top-banner">
+
+        <div class="banner-body">
+
+            <h1>Let’s Finish your <br>
+                internal Evil</h1><br>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit <br>
+                referrentur, at eam falli deterruisset. No duo populo 
+                animal noluisse, enim</p><br><br>
+            <a class="button-1" target="_blank" href="##">Donate Now</a>
+
+        </div>
+
+
+    </div>
+    <section class="body-1">
+
+
+        <div class="para-1">
+
+            <h1>Their lives depend on <br> 
+                your donation</h1><br>
+            <p>
+                Lorem ipsum dolor sit amet, usu cu esse possit 
+                referrentur, at eam falli deterruisset. <br>  No duo populo 
+                animal noluisse, enim <br>
+                Lorem ipsum dolor sit amet, usu cu esse possit 
+                referrentur, at eam falli deterruisset
+            </p> <br><br>
+            <a class="button-2" target="_blank" href="##">Explore More</a>
+
+        </div>
+
+
+        <div class="img-1">
+
+            <img src="img/download.png" alt="">
+
+        </div>
+
+    </section>
+
 </body>
 </html>
