--- a/index.html
+++ b/index.html
@@ -184,20 +184,60 @@
 
             <div class="part-1">
 
-             <div class="i1">   <img src="img/download-3.png" alt=""></div>
+             <div class="i1">   
+                <img src="img/download-3.png" alt="">
+            </div>
 
                 <div class="p1">
-                    <h4>Zakat Fund</h4>
+                    <h4>Zakat Fund</h4> 
                 <p>Lorem ipsum dolor sit amet, usu 
                     cu esse possit referrentur, at eam 
                     falli deterruisset. No duo populo 
-                    animal noluisse, enim</p>
-
+                    animal noluisse, enim</p> <br> 
+            <a class="button-3" target="_blank"  href="##">Donate For Zakat</a>         
                 </div>
             </div>
 
 
+            <div class="part-1">
+
+                <div class="i1">   
+                   <img src="img/download-3.png" alt="">
+               </div>
+   
+                   <div class="p1">
+                       <h4>Zakat Fund</h4> 
+                   <p>Lorem ipsum dolor sit amet, usu 
+                       cu esse possit referrentur, at eam 
+                       falli deterruisset. No duo populo 
+                       animal noluisse, enim</p> <br> 
+               <a class="button-3" target="_blank"  href="##">Donate For Zakat</a>         
+                   </div>
+               </div>
+
+               <div class="part-1">
+
+                <div class="i1">   
+                   <img src="img/download-3.png" alt="">
+               </div>
+   
+                   <div class="p1">
+                       <h4>Zakat Fund</h4> 
+                   <p>Lorem ipsum dolor sit amet, usu 
+                       cu esse possit referrentur, at eam 
+                       falli deterruisset. No duo populo 
+                       animal noluisse, enim</p> <br> 
+               <a class="button-3" target="_blank"  href="##">Donate For Zakat</a>         
+                   </div>
+               </div>
+
 
         </div>
+
+
+    <footer>
+        <h2>Eid ul Adha</h2>
+        <p>I'm gonna do it</p>
+    </footer>
 </body>
 </html>
